[gd_scene load_steps=13 format=2]

[ext_resource path="res://Arkanoid/Ball/Ball.tscn" type="PackedScene" id=1]
[ext_resource path="res://Arkanoid/Platform/Platform.tscn" type="PackedScene" id=2]
[ext_resource path="res://Arkanoid/LevelFirst/Brick.tscn" type="PackedScene" id=3]
[ext_resource path="res://textures/Simple Shapes/Square.png" type="Texture" id=4]
[ext_resource path="res://textures/prototype/Black/tex_6.png" type="Texture" id=5]
[ext_resource path="res://Arkanoid/LevelFirst/LevelFirst.gd" type="Script" id=6]
[ext_resource path="res://Arkanoid/LevelFirst/PauseScreen.gd" type="Script" id=7]
[ext_resource path="res://Arkanoid/LevelFirst/DeadZone.gd" type="Script" id=8]
[ext_resource path="res://Arkanoid/LevelFirst/HUD.gd" type="Script" id=9]
[ext_resource path="res://Arkanoid/LevelFirst/TimeLabel.gd" type="Script" id=10]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 256, 255 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 516, 44 )

[node name="LevelFirst" type="Node2D"]
script = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="Tex6" type="Sprite" parent="."]
position = Vector2( 524, 391 )
scale = Vector2( 1.0791, 1 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="Platform" parent="." instance=ExtResource( 2 )]

[node name="Ball" parent="." instance=ExtResource( 1 )]

[node name="Bricks" type="Node2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="BrickW" parent="Bricks" instance=ExtResource( 3 )]
modulate = Color( 0.231373, 0.415686, 0.956863, 1 )
position = Vector2( 75, 51 )
scale = Vector2( 1.032, 0.331 )

[node name="BrickW2" parent="Bricks" instance=ExtResource( 3 )]
modulate = Color( 0.231373, 0.415686, 0.956863, 1 )
position = Vector2( 185, 51 )
scale = Vector2( 1.032, 0.331 )

[node name="BrickW3" parent="Bricks" instance=ExtResource( 3 )]
modulate = Color( 0.231373, 0.415686, 0.956863, 1 )
position = Vector2( 295, 51 )
scale = Vector2( 1.032, 0.331 )

[node name="BrickW4" parent="Bricks" instance=ExtResource( 3 )]
modulate = Color( 0.231373, 0.415686, 0.956863, 1 )
position = Vector2( 405, 51 )
scale = Vector2( 1.032, 0.331 )

[node name="BrickW5" parent="Bricks" instance=ExtResource( 3 )]
modulate = Color( 0.231373, 0.415686, 0.956863, 1 )
position = Vector2( 515, 51 )
scale = Vector2( 1.032, 0.331 )

[node name="BrickW6" parent="Bricks" instance=ExtResource( 3 )]
modulate = Color( 0.231373, 0.415686, 0.956863, 1 )
position = Vector2( 625, 51 )
scale = Vector2( 1.032, 0.331 )

[node name="BrickW7" parent="Bricks" instance=ExtResource( 3 )]
modulate = Color( 0.231373, 0.415686, 0.956863, 1 )
position = Vector2( 735, 51 )
scale = Vector2( 1.032, 0.331 )

[node name="BrickW8" parent="Bricks" instance=ExtResource( 3 )]
modulate = Color( 0.231373, 0.415686, 0.956863, 1 )
position = Vector2( 845, 51 )
scale = Vector2( 1.032, 0.331 )

[node name="BrickW9" parent="Bricks" instance=ExtResource( 3 )]
modulate = Color( 0.231373, 0.415686, 0.956863, 1 )
position = Vector2( 954, 51 )
scale = Vector2( 1.032, 0.331 )

[node name="BrickW10" parent="Bricks" instance=ExtResource( 3 )]
modulate = Color( 0.94902, 0.278431, 0.278431, 1 )
position = Vector2( 75, 93 )
scale = Vector2( 1.032, 0.331 )

[node name="BrickW11" parent="Bricks" instance=ExtResource( 3 )]
modulate = Color( 0.94902, 0.278431, 0.278431, 1 )
position = Vector2( 185, 93 )
scale = Vector2( 1.032, 0.331 )

[node name="BrickW12" parent="Bricks" instance=ExtResource( 3 )]
modulate = Color( 0.94902, 0.278431, 0.278431, 1 )
position = Vector2( 295, 93 )
scale = Vector2( 1.032, 0.331 )

[node name="BrickW13" parent="Bricks" instance=ExtResource( 3 )]
modulate = Color( 0.94902, 0.278431, 0.278431, 1 )
position = Vector2( 405, 93 )
scale = Vector2( 1.032, 0.331 )

[node name="BrickW14" parent="Bricks" instance=ExtResource( 3 )]
modulate = Color( 0.94902, 0.278431, 0.278431, 1 )
position = Vector2( 515, 93 )
scale = Vector2( 1.032, 0.331 )

[node name="BrickW15" parent="Bricks" instance=ExtResource( 3 )]
modulate = Color( 0.94902, 0.278431, 0.278431, 1 )
position = Vector2( 625, 93 )
scale = Vector2( 1.032, 0.331 )

[node name="BrickW16" parent="Bricks" instance=ExtResource( 3 )]
modulate = Color( 0.94902, 0.278431, 0.278431, 1 )
position = Vector2( 735, 93 )
scale = Vector2( 1.032, 0.331 )

[node name="BrickW17" parent="Bricks" instance=ExtResource( 3 )]
modulate = Color( 0.94902, 0.278431, 0.278431, 1 )
position = Vector2( 845, 93 )
scale = Vector2( 1.032, 0.331 )

[node name="BrickW18" parent="Bricks" instance=ExtResource( 3 )]
modulate = Color( 0.94902, 0.278431, 0.278431, 1 )
position = Vector2( 954, 93 )
scale = Vector2( 1.032, 0.331 )

[node name="BrickW19" parent="Bricks" instance=ExtResource( 3 )]
modulate = Color( 0.337255, 0.741176, 0.239216, 1 )
position = Vector2( 75, 134 )
scale = Vector2( 1.032, 0.331 )

[node name="BrickW20" parent="Bricks" instance=ExtResource( 3 )]
modulate = Color( 0.337255, 0.741176, 0.239216, 1 )
position = Vector2( 185, 134 )
scale = Vector2( 1.032, 0.331 )

[node name="BrickW21" parent="Bricks" instance=ExtResource( 3 )]
modulate = Color( 0.337255, 0.741176, 0.239216, 1 )
position = Vector2( 295, 134 )
scale = Vector2( 1.032, 0.331 )

[node name="BrickW22" parent="Bricks" instance=ExtResource( 3 )]
modulate = Color( 0.337255, 0.741176, 0.239216, 1 )
position = Vector2( 405, 134 )
scale = Vector2( 1.032, 0.331 )

[node name="BrickW23" parent="Bricks" instance=ExtResource( 3 )]
modulate = Color( 0.337255, 0.741176, 0.239216, 1 )
position = Vector2( 515, 134 )
scale = Vector2( 1.032, 0.331 )

[node name="BrickW24" parent="Bricks" instance=ExtResource( 3 )]
modulate = Color( 0.337255, 0.741176, 0.239216, 1 )
position = Vector2( 625, 134 )
scale = Vector2( 1.032, 0.331 )

[node name="BrickW25" parent="Bricks" instance=ExtResource( 3 )]
modulate = Color( 0.337255, 0.741176, 0.239216, 1 )
position = Vector2( 735, 134 )
scale = Vector2( 1.032, 0.331 )

[node name="BrickW26" parent="Bricks" instance=ExtResource( 3 )]
modulate = Color( 0.337255, 0.741176, 0.239216, 1 )
position = Vector2( 845, 134 )
scale = Vector2( 1.032, 0.331 )

[node name="BrickW27" parent="Bricks" instance=ExtResource( 3 )]
modulate = Color( 0.337255, 0.741176, 0.239216, 1 )
position = Vector2( 954, 134 )
scale = Vector2( 1.032, 0.331 )

[node name="Walls" type="Node2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="Wall" type="StaticBody2D" parent="Walls"]
position = Vector2( -129, 309 )
scale = Vector2( 0.5, 1.238 )
collision_layer = 16
collision_mask = 8
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall"]
shape = SubResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="Walls/Wall/CollisionShape2D"]
modulate = Color( 1, 0, 0.984314, 1 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="Wall3" type="StaticBody2D" parent="Walls"]
position = Vector2( 503, 732 )
rotation = 1.57079
scale = Vector2( 0.5, 2.478 )
collision_layer = 16
collision_mask = 8
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall3"]
shape = SubResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="Walls/Wall3/CollisionShape2D"]
modulate = Color( 1, 0, 0.984314, 1 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="Wall4" type="StaticBody2D" parent="Walls"]
position = Vector2( 538, -129 )
rotation = 1.57079
scale = Vector2( 0.5, 2.478 )
collision_layer = 16
collision_mask = 8
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall4"]
shape = SubResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="Walls/Wall4/CollisionShape2D"]
modulate = Color( 1, 0, 0.984314, 1 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="Wall2" type="StaticBody2D" parent="Walls"]
position = Vector2( 1154, 309 )
scale = Vector2( 0.5, 1.238 )
collision_layer = 16
collision_mask = 8
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall2"]
shape = SubResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="Walls/Wall2/CollisionShape2D"]
modulate = Color( 1, 0, 0.984314, 1 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="DeadZone" type="Area2D" parent="."]
position = Vector2( 6, 545 )
collision_layer = 0
collision_mask = 8
script = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeadZone"]
position = Vector2( 506, 34 )
shape = SubResource( 5 )

[node name="HUD" type="CanvasLayer" parent="."]
follow_viewport_enable = true
script = ExtResource( 9 )
bricks_path = NodePath("../Bricks")

[node name="Control" type="Control" parent="HUD"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_lock_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/Control"]
anchor_left = 0.028
anchor_top = 0.991
anchor_right = 0.028
anchor_bottom = 0.991
margin_top = -57.6
margin_right = 103.0
custom_constants/separation = 29
__meta__ = {
"_edit_lock_": true
}

[node name="LifeLabel" type="Label" parent="HUD/Control/VBoxContainer"]
margin_right = 103.0
margin_bottom = 14.0
text = "LIFE"
__meta__ = {
"_edit_lock_": true
}

[node name="BricksLabel" type="Label" parent="HUD/Control/VBoxContainer"]
margin_top = 43.0
margin_right = 103.0
margin_bottom = 57.0
text = "BRICKS_TO_WIN"
__meta__ = {
"_edit_lock_": true
}

[node name="TimeLabel" type="Label" parent="HUD/Control"]
anchor_left = 0.206
anchor_top = 0.954
anchor_right = 0.206
anchor_bottom = 0.954
margin_left = -20.0
margin_top = -14.0
margin_right = 20.0
text = "TIME"
script = ExtResource( 10 )
__meta__ = {
"_edit_lock_": true
}

[node name="PauseScreen" type="Control" parent="HUD"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )

[node name="ColorRect" type="ColorRect" parent="HUD/PauseScreen"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.760784 )
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="HUD/PauseScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -7.0
margin_right = 20.0
margin_bottom = 7.0
text = "PAUSED"
__meta__ = {
"_edit_lock_": true
}

[node name="DeathScreen" type="Control" parent="HUD"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true
}

[node name="ColorRect" type="ColorRect" parent="HUD/DeathScreen"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.435294, 0, 0, 0.670588 )
__meta__ = {
"_edit_lock_": true
}

[node name="CenterContainer" type="CenterContainer" parent="HUD/DeathScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/DeathScreen/CenterContainer"]
margin_left = 474.0
margin_top = 278.0
margin_right = 549.0
margin_bottom = 322.0
custom_constants/separation = 10

[node name="Label" type="Label" parent="HUD/DeathScreen/CenterContainer/VBoxContainer"]
margin_right = 75.0
margin_bottom = 14.0
text = "YOU LOOSE"
__meta__ = {
"_edit_lock_": true
}

[node name="RetryButton" type="Button" parent="HUD/DeathScreen/CenterContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 75.0
margin_bottom = 44.0
text = "Retry"

[node name="WinScreen" type="Control" parent="HUD"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true
}

[node name="ColorRect2" type="ColorRect" parent="HUD/WinScreen"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.360784, 0.882353, 0.0941176, 0.403922 )
__meta__ = {
"_edit_lock_": true
}

[node name="CenterContainer" type="CenterContainer" parent="HUD/WinScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/WinScreen/CenterContainer"]
margin_left = 482.0
margin_top = 266.0
margin_right = 542.0
margin_bottom = 334.0
custom_constants/separation = 10

[node name="Label" type="Label" parent="HUD/WinScreen/CenterContainer/VBoxContainer"]
margin_right = 60.0
margin_bottom = 14.0
text = "YOU WIN"
align = 1
__meta__ = {
"_edit_lock_": true
}

[node name="WinTime" type="Label" parent="HUD/WinScreen/CenterContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 60.0
margin_bottom = 38.0
text = "WINTIME"
align = 1
__meta__ = {
"_edit_lock_": true
}

[node name="RetryButtonLoose" type="Button" parent="HUD/WinScreen/CenterContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 75.0
margin_bottom = 44.0
text = "Retry"

[connection signal="body_entered" from="DeadZone" to="DeadZone" method="_on_DeadZone_body_entered"]
[connection signal="pressed" from="HUD/DeathScreen/CenterContainer/VBoxContainer/RetryButton" to="." method="_on_RetryButton_pressed"]
[connection signal="pressed" from="HUD/WinScreen/CenterContainer/VBoxContainer/RetryButtonLoose" to="." method="_on_RetryButtonLoose_pressed"]
